--- a/src/Styles/_partials/_general.scss
+++ b/src/Styles/_partials/_general.scss
@@ -46,6 +46,7 @@ html {
   overflow-wrap: break-word;
   transition: 400ms ease-out;
   margin: 0 0 2rem 0;
+  height: 100%;
 }
 .btn-secondary:hover {
   background-color: $mercy-color-1;
@@ -59,12 +60,14 @@ html {
   font-weight: 600 !important;
   color: $mercy-color-1 !important;
   border-radius: 0.365rem;
+  height: 100%;
   &:hover {
     color: #fff !important;
   }
 }
 .btn-sm {
   font-size: 1.4rem !important;
+  height: 100%;
 }
 
 .btn-info {
@@ -72,10 +75,16 @@ html {
   font-weight: 600 !important;
   color: #fff !important;
   border: none !important;
+  height: 100%;
   // box-shadow: 0px 0px 2px 2px grey !important;
   &:hover {
     background-color: #000 !important;
   }
+}
+
+.btn-lg {
+  font-size: 1.4rem !important;
+  height: 100%;
 }
 // Form
 .form-control {
