feat: Complete search functionality

--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -291,6 +291,11 @@ a {
   display: none !important;
 }
 
+.highlight {
+  background-color: yellow;
+  color: #000;
+}
+
 /* Button Colours */
 .dashboard {
   display: flex;
