--- a/src/Styles/_partials/_general.scss
+++ b/src/Styles/_partials/_general.scss
@@ -258,3 +258,10 @@ a {
 .tox-statusbar__path {
   display: none !important;
 }
+
+// Highlight
+
+.highlight {
+  background-color: yellow;
+  color: #000;
+}
