feat: Complete search functionality

--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -610,6 +610,32 @@ textarea[data-info=content] {
   height: 300px !important;
 }
 
+[aria-label=Pagination] {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  list-style-type: none;
+  padding: 0;
+  padding: 3rem 0 2rem 0;
+}
+[aria-label=Pagination] li {
+  padding: 0.5rem;
+  height: 100%;
+  color: #000;
+}
+[aria-label=Pagination] li a {
+  color: black;
+}
+
+[aria-label="Next page"] {
+  font-size: 2rem;
+}
+
+[aria-label="Previous page"] {
+  font-size: 2rem;
+}
+
 @media screen and (max-width: 1000px) {
   .container-fluid {
     padding: 0 2rem !important;
