--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -5,7 +5,8 @@
 @import "./_components/navigation";
 @import "./_components/sidebar";
 @import "./_components/login";
-@import "./_components/get-help.scss";
+@import "./_components/get-help";
 @import "./_partials/calender";
-@import "./_components/questions.scss";
+@import "./_components/questions";
+@import "./_partials/pagination";
 @import "./mobile";
