--- a/src/Styles/_components/navigation.scss
+++ b/src/Styles/_components/navigation.scss
@@ -41,3 +41,7 @@ header {
     background-color: $mercy-color-1 !important;
     color: #fff !important;
 }
+.active-header {
+    background-color: $mercy-color-1 !important;
+    color: #fff !important;
+}
