--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -9,4 +9,5 @@
 @import "./_partials/calender";
 @import "./_components/questions";
 @import "./_partials/pagination";
+@import "./_components/job";
 @import "./mobile";
