--- a/src/Styles/_compiled/job.css
+++ b/src/Styles/_compiled/job.css
@@ -2,3 +2,8 @@
   padding-top: 2.5rem !important;
   padding-bottom: 2.5rem !important;
 }
+
+.form-create-job {
+  width: 100%;
+  max-width: 90rem;
+}
