--- a/src/Styles/_partials/_typography.scss
+++ b/src/Styles/_partials/_typography.scss
@@ -27,3 +27,7 @@ a {
 div {
   font-family: 'Roboto', sans-serif;
 }
+span {
+  font-size: $mercy-font-size-1;
+  font-family: 'Roboto', sans-serif;
+}
