--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -1,4 +1,5 @@
 /* Button Colours */
+/* Button Colours */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 html, body {
   font-family: "Roboto", sans-serif;
@@ -20,6 +21,11 @@ h1 {
 }
 
 p {
+  font-size: 1.6rem;
+  font-family: "Roboto", sans-serif;
+}
+
+ul, ol {
   font-size: 1.6rem;
   font-family: "Roboto", sans-serif;
 }
@@ -304,6 +310,7 @@ a {
 .highlight {
   background-color: yellow;
   color: #000;
+  font-size: inherit;
 }
 
 .m-right {
