--- a/src/Styles/_partials/typography.scss
+++ b/src/Styles/_partials/typography.scss
@@ -1,3 +1,4 @@
+@import './variables.scss';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 html, body {
@@ -17,6 +18,10 @@ h1 {
     font-weight: 700 !important;
   }
 p {
+  font-size: $mercy-font-size-1;
+  font-family: 'Roboto', sans-serif;
+}
+ul, ol {
   font-size: $mercy-font-size-1;
   font-family: 'Roboto', sans-serif;
 }
