--- a/src/Styles/_partials/general.scss
+++ b/src/Styles/_partials/general.scss
@@ -1,3 +1,5 @@
+@import './variables.scss';
+
 html {
     font-size: 10px;
     font-family: 'Roboto', sans-serif !important;
@@ -281,3 +283,6 @@ a {
   width: 100%;
 }
 
+// Toggle
+.toggle.ios, .toggle-on.ios, .toggle-off.ios { border-radius: 20px; }
+.toggle.ios .toggle-handle { border-radius: 20px; }
