--- a/src/Styles/_compiled/general.css
+++ b/src/Styles/_compiled/general.css
@@ -284,3 +284,23 @@ a {
 .toggle.ios .toggle-handle {
   border-radius: 20px;
 }
+
+.btn-light {
+  --bs-btn-color: #000;
+  --bs-btn-bg: grey !important;
+  border: 1px solid black !important;
+  --bs-btn-border-color: black !important;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #d3d4d5;
+  --bs-btn-hover-border-color: black;
+  --bs-btn-focus-shadow-rgb: 211, 212, 213;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #c6c7c8;
+  --bs-btn-active-border-color: black !important;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: #f8f9fa;
+  --bs-btn-disabled-border-color: #f8f9fa;
+  height: 100% !important;
+  width: 20px !important;
+}
