--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -331,6 +331,26 @@ a {
   border-radius: 20px;
 }
 
+.btn-light {
+  --bs-btn-color: #000;
+  --bs-btn-bg: grey !important;
+  border: 1px solid black !important;
+  --bs-btn-border-color: black !important;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #d3d4d5;
+  --bs-btn-hover-border-color: black;
+  --bs-btn-focus-shadow-rgb: 211, 212, 213;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #c6c7c8;
+  --bs-btn-active-border-color: black !important;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: #f8f9fa;
+  --bs-btn-disabled-border-color: #f8f9fa;
+  height: 100% !important;
+  width: 20px !important;
+}
+
 /* Button Colours */
 .dashboard {
   display: flex;
@@ -648,6 +668,11 @@ textarea[data-info=content] {
 
 .tox.tox-tinymce {
   height: 300px !important;
+}
+
+.question-select {
+  border: none !important;
+  width: 100%;
 }
 
 [aria-label=Pagination] {
