--- a/src/Styles/_components/questions.scss
+++ b/src/Styles/_components/questions.scss
@@ -28,3 +28,8 @@ textarea[data-info="content"]{
 .tox.tox-tinymce {
     height: 300px !important;
 }
+
+.question-select {
+    border: none !important;
+    width: 100%;
+}
