--- a/src/Styles/_components/job.scss
+++ b/src/Styles/_components/job.scss
@@ -12,3 +12,12 @@
     height: 300px;
     overflow-y: scroll;
 }
+
+.get-help-item {
+    position: relative;
+    .checked-mark {
+        position: absolute;
+        right: -5px;
+        top: -10px;
+    }
+}
