--- a/src/Styles/_partials/typography.scss
+++ b/src/Styles/_partials/typography.scss
@@ -36,3 +36,7 @@ span {
   font-size: $mercy-font-size-1;
   font-family: 'Roboto', sans-serif;
 }
+label {
+  font-size: $mercy-font-size-1 !important;
+  font-family: 'Roboto', sans-serif;
+}
