docs: added mentors page

--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -611,6 +611,16 @@ header {
 }
 
 /* Button Colours */
+.mentor {
+  box-shadow: 0px 0px 7px grey;
+  transition: 400ms ease-out;
+}
+.mentor:hover {
+  background-color: #0f9ed5;
+  color: #fff;
+}
+
+/* Button Colours */
 .react-calendar {
   width: 100% !important;
   max-width: 100%;
