--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -6,6 +6,7 @@
 @import "./_components/sidebar";
 @import "./_components/login";
 @import "./_components/get-help";
+@import "./_components/mentor.scss";
 @import "./_partials/calender";
 @import "./_components/questions";
 @import "./_partials/pagination";
