--- a/src/Styles/_components/mentor.scss
+++ b/src/Styles/_components/mentor.scss
@@ -3,8 +3,19 @@
 .mentor { 
     box-shadow: 0px 0px 7px grey; 
     transition: 400ms ease-out;
+    height: 100% !important;
     &:hover {
         background-color: $mercy-color-1;
         color: #fff;
       }
+}
+
+.mentor-details-img {
+  width: 7rem;
+  height: 9rem;
+  border: 1px solid black;
+  box-shadow: 0px 0px 7px grey;
+  border-radius: 3px;
+  object-fit: cover;
+  margin-right: 1rem;
 }
