--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -11,4 +11,5 @@
 @import "./_components/questions";
 @import "./_partials/pagination";
 @import "./_components/job";
+@import "./_components/mentor-chat.scss";
 @import "./mobile";
