feat: add pagination and search functionality for mentors page

--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -718,6 +718,8 @@ textarea[data-info=content] {
   padding: 0.5rem;
   height: 100%;
   color: #000;
+  display: flex;
+  align-items: center;
 }
 [aria-label=Pagination] li a {
   color: black;
