--- a/src/Styles/_compiled/pagination.css
+++ b/src/Styles/_compiled/pagination.css
@@ -11,6 +11,8 @@
   padding: 0.5rem;
   height: 100%;
   color: #000;
+  display: flex;
+  align-items: center;
 }
 [aria-label=Pagination] li a {
   color: black;
