--- a/src/Styles/_partials/_pagination.scss
+++ b/src/Styles/_partials/_pagination.scss
@@ -10,6 +10,8 @@
         padding: 0.5rem;
         height: 100%;
         color: #000;
+        display: flex;
+        align-items: center;
         a {
             color: black;
         }
