feat: mentor chat

--- a/src/Styles/_compiled/mentor-chat.css
+++ b/src/Styles/_compiled/mentor-chat.css
@@ -1,7 +1,7 @@
 /* Button Colours */
 .mentors-chat {
   margin-bottom: -11rem;
-  background-color: #f8f9fc;
+  background-color: #fff;
   overflow-x: hidden;
 }
 
@@ -39,6 +39,7 @@
 }
 
 .mentors-chat-item-keyboard {
+  border-top: 1px solid #d0cccc;
   display: flex;
   align-items: center;
   height: 10vh;
@@ -90,6 +91,7 @@
 .current-user-message {
   width: 70%;
   float: right;
+  display: block;
 }
 .current-user-message .card {
   border-radius: 1rem 1rem 0 1rem !important;
@@ -113,8 +115,8 @@
   margin-right: 1rem;
 }
 .current-user-message .image .chat-img {
-  width: 5rem !important;
-  height: 5rem !important;
+  width: 4rem !important;
+  height: 4rem !important;
   object-position: center;
   border: 1px solid black;
   border-radius: 3px;
@@ -128,7 +130,7 @@
 }
 .other-user-message .card {
   border-radius: 1rem 1rem 1rem 0 !important;
-  background-color: lightgray !important;
+  background-color: lightgrey !important;
   color: #000 !important;
   font-weight: 500 !important;
   margin-left: 7rem;
@@ -148,8 +150,8 @@
   margin-left: 1rem;
 }
 .other-user-message .image .chat-img {
-  width: 5rem !important;
-  height: 5rem !important;
+  width: 4rem !important;
+  height: 4rem !important;
   object-position: center;
   border: 1px solid black;
   border-radius: 3px;
