--- a/src/Styles/_components/mentor-chat.scss
+++ b/src/Styles/_components/mentor-chat.scss
@@ -30,6 +30,9 @@
 .mentors-chat-item-body {
     height: calc(90vh - 190px);
     overflow-y: auto;
+    margin-top: auto;
+    display: flex;
+    flex-direction: column-reverse;
 }
 .mentors-chat-item-keyboard {
     border-top: 1px solid #d0cccc;
@@ -81,9 +84,10 @@
 .current-user-message {
     width: 70%;
     float: right;
+    margin-left: auto;
     display: block;
     .card {
-    border-radius: 1rem 1rem 0 1rem !important;
+    border-radius: 1.5rem 1.5rem 1.5rem 0 !important;
     background-color: $mercy-color-1 !important;
     color: #fff !important;
     font-weight: 500 !important;
@@ -112,9 +116,10 @@
 }
 .other-user-message {
     width: 70%;
+    margin-right: auto;
     float: left;
     .card {
-    border-radius: 1rem 1rem 1rem 0 !important;
+    border-radius: 1.5rem 1.5rem 1.5rem 0 !important;
     background-color: lightgrey !important;
     color: #000 !important;
     font-weight: 500 !important;
