--- a/src/Styles/_compiled/mentor-chat.css
+++ b/src/Styles/_compiled/mentor-chat.css
@@ -36,6 +36,9 @@
 .mentors-chat-item-body {
   height: calc(90vh - 190px);
   overflow-y: auto;
+  margin-top: auto;
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 .mentors-chat-item-keyboard {
@@ -91,10 +94,11 @@
 .current-user-message {
   width: 70%;
   float: right;
+  margin-left: auto;
   display: block;
 }
 .current-user-message .card {
-  border-radius: 1rem 1rem 0 1rem !important;
+  border-radius: 1.5rem 1.5rem 1.5rem 0 !important;
   background-color: #0f9ed5 !important;
   color: #fff !important;
   font-weight: 500 !important;
@@ -126,10 +130,11 @@
 
 .other-user-message {
   width: 70%;
+  margin-right: auto;
   float: left;
 }
 .other-user-message .card {
-  border-radius: 1rem 1rem 1rem 0 !important;
+  border-radius: 1.5rem 1.5rem 1.5rem 0 !important;
   background-color: lightgrey !important;
   color: #000 !important;
   font-weight: 500 !important;
