feat: Update mentor chat page

--- a/src/Styles/_compiled/general.css
+++ b/src/Styles/_compiled/general.css
@@ -308,3 +308,11 @@ a {
 .inline {
   display: inline;
 }
+
+.display-none {
+  display: none !important;
+}
+
+.display-block {
+  display: block !important;
+}
