--- a/src/Styles/_compiled/mentor-chat.css
+++ b/src/Styles/_compiled/mentor-chat.css
@@ -55,7 +55,7 @@
 
 .chat-input {
   color: #000;
-  border-radius: 1rem !important;
+  border-radius: 50px !important;
   border: 2px solid #d3d3d3 !important;
 }
 
@@ -92,13 +92,14 @@
 }
 
 .current-user-message {
-  width: 70%;
+  width: fit-content;
+  max-width: 70%;
   float: right;
   margin-left: auto;
   display: block;
 }
 .current-user-message .card {
-  border-radius: 1.5rem 1.5rem 1.5rem 0 !important;
+  border-radius: 1.5rem 1.5rem 0 1.5rem !important;
   background-color: #0f9ed5 !important;
   color: #fff !important;
   font-weight: 500 !important;
@@ -129,7 +130,8 @@
 }
 
 .other-user-message {
-  width: 70%;
+  width: fit-content;
+  max-width: 70%;
   margin-right: auto;
   float: left;
 }
