--- a/src/Styles/_components/mentor-chat.scss
+++ b/src/Styles/_components/mentor-chat.scss
@@ -48,7 +48,7 @@
 .chat-input {
     color: #000;
     // box-shadow: 0px 0px 7px grey !important;
-    border-radius: 1rem !important;
+    border-radius: 50px !important;
     border: 2px solid #d3d3d3 !important;
 }
 .send-chat {
@@ -82,12 +82,13 @@
     margin: 1rem 0;
 }
 .current-user-message {
-    width: 70%;
+    width: fit-content;
+    max-width: 70%;
     float: right;
     margin-left: auto;
     display: block;
     .card {
-    border-radius: 1.5rem 1.5rem 1.5rem 0 !important;
+    border-radius: 1.5rem 1.5rem 0 1.5rem !important;
     background-color: $mercy-color-1 !important;
     color: #fff !important;
     font-weight: 500 !important;
@@ -115,7 +116,8 @@
     }
 }
 .other-user-message {
-    width: 70%;
+    width: fit-content;
+    max-width: 70%;
     margin-right: auto;
     float: left;
     .card {
