--- a/src/Styles/_partials/general.scss
+++ b/src/Styles/_partials/general.scss
@@ -310,4 +310,11 @@ a {
 .inline {
   display: inline;
 }
+
+.display-none {
+  display: none !important;
+}
+.display-block {
+  display: block !important;
+}
  
