--- a/src/Styles/_components/mentor-chat.scss
+++ b/src/Styles/_components/mentor-chat.scss
@@ -95,6 +95,8 @@
     margin-right: 7rem;
     margin-bottom: -0.5rem;
     border: none !important;
+    width: fit-content !important;
+    padding: 0 1rem !important;
     p {
         margin: 0;
     }
@@ -128,6 +130,8 @@
     margin-left: 7rem;
     margin-bottom: -0.5rem;
     border: none !important;
+    width: fit-content !important;
+    padding: 0 1rem !important;
     p {
         margin: 0;
     }
