--- a/src/Styles/_compiled/mentor-chat.css
+++ b/src/Styles/_compiled/mentor-chat.css
@@ -106,6 +106,8 @@
   margin-right: 7rem;
   margin-bottom: -0.5rem;
   border: none !important;
+  width: fit-content !important;
+  padding: 0 1rem !important;
 }
 .current-user-message .card p {
   margin: 0;
@@ -143,6 +145,8 @@
   margin-left: 7rem;
   margin-bottom: -0.5rem;
   border: none !important;
+  width: fit-content !important;
+  padding: 0 1rem !important;
 }
 .other-user-message .card p {
   margin: 0;
