--- a/src/Styles/_components/mentor-chat.scss
+++ b/src/Styles/_components/mentor-chat.scss
@@ -6,6 +6,10 @@
     background-color: #fff;
     overflow-x: hidden;
 }
+.chat-date {
+    font-size: 1.2rem !important;
+    color: grey;
+}
 .mentors-chat-list {
     height: 100%;
     padding-right: 2rem !important;
@@ -94,6 +98,7 @@
     font-weight: 500 !important;
     margin-right: 7rem;
     margin-bottom: -0.5rem;
+    margin-left: auto !important;
     border: none !important;
     width: fit-content !important;
     padding: 0 1rem !important;
@@ -129,6 +134,7 @@
     font-weight: 500 !important;
     margin-left: 7rem;
     margin-bottom: -0.5rem;
+    margin-right: auto !important;
     border: none !important;
     width: fit-content !important;
     padding: 0 1rem !important;
@@ -152,3 +158,4 @@
         }
     }
 }
+
