--- a/src/Styles/_compiled/mentor-chat.css
+++ b/src/Styles/_compiled/mentor-chat.css
@@ -5,6 +5,11 @@
   overflow-x: hidden;
 }
 
+.chat-date {
+  font-size: 1.2rem !important;
+  color: grey;
+}
+
 .mentors-chat-list {
   height: 100%;
   padding-right: 2rem !important;
@@ -105,6 +110,7 @@
   font-weight: 500 !important;
   margin-right: 7rem;
   margin-bottom: -0.5rem;
+  margin-left: auto !important;
   border: none !important;
   width: fit-content !important;
   padding: 0 1rem !important;
@@ -144,6 +150,7 @@
   font-weight: 500 !important;
   margin-left: 7rem;
   margin-bottom: -0.5rem;
+  margin-right: auto !important;
   border: none !important;
   width: fit-content !important;
   padding: 0 1rem !important;
