--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -62,6 +62,7 @@ main {
 .btn {
   font-size: 1.6rem !important;
   font-family: "Roboto", sans-serif !important;
+  height: fit-content !important;
 }
 
 .btn-main {
