--- a/src/Styles/_compiled/mentor.css
+++ b/src/Styles/_compiled/mentor.css
@@ -18,3 +18,12 @@
   object-fit: cover;
   margin-right: 1rem;
 }
+
+.chat-item {
+  padding-bottom: 1rem !important;
+  color: #000;
+}
+.chat-item:hover {
+  color: #fff !important;
+  background-color: #0f9ed5 !important;
+}
