--- a/src/Styles/_components/mentor.scss
+++ b/src/Styles/_components/mentor.scss
@@ -19,3 +19,13 @@
   object-fit: cover;
   margin-right: 1rem;
 }
+
+.chat-item {
+  padding-bottom: 1rem !important;
+  color: #000;
+  // cursor: pointer;
+  &:hover {
+    color: #fff !important;
+    background-color: $mercy-color-1 !important
+  }
+}
