--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -376,6 +376,9 @@ hr {
 .grey {
   color: grey;
 }
+.grey:hover {
+  color: inherit !important;
+}
 
 /* Button Colours */
 .dashboard {
@@ -655,10 +658,17 @@ header {
 .chat-item {
   padding-bottom: 1rem !important;
   color: #000;
+  border-bottom: 1px solid lightgrey;
 }
 .chat-item:hover {
   color: #fff !important;
   background-color: #0f9ed5 !important;
+}
+.chat-item:hover p:nth-child(2) {
+  color: #fff;
+}
+.chat-item p:nth-child(2) {
+  color: grey;
 }
 
 /* Button Colours */
