--- a/src/Styles/_components/mentor.scss
+++ b/src/Styles/_components/mentor.scss
@@ -20,6 +20,10 @@
   margin-right: 1rem;
 }
 
+.mentors-chat-sidebar-body {
+  overflow-y: auto;
+}
+
 .chat-item {
   padding-bottom: 1rem !important;
   color: #000;
