feat: Update to mentor chat page

--- a/src/Styles/_compiled/mentor-chat.css
+++ b/src/Styles/_compiled/mentor-chat.css
@@ -176,3 +176,13 @@
   object-fit: cover;
   border-radius: 50%;
 }
+
+.sidebare-lastchat p {
+  color: lightgray;
+}
+
+.sidebare-lastchat * {
+  font-size: 1.4rem !important;
+  font-family: "Roboto", sans-serif;
+  color: inherit !important;
+}
