--- a/src/Styles/_components/mentor-chat.scss
+++ b/src/Styles/_components/mentor-chat.scss
@@ -159,3 +159,13 @@
     }
 }
 
+.sidebare-lastchat p {
+    color: lightgray;
+}
+
+.sidebare-lastchat * {
+    font-size: 1.4rem !important;
+    font-family: 'Roboto', sans-serif;
+    color: inherit !important;
+}
+
