--- a/src/Styles/_components/mentor-chat.scss
+++ b/src/Styles/_components/mentor-chat.scss
@@ -37,13 +37,15 @@
     margin-top: auto;
     display: flex;
     flex-direction: column-reverse;
+    background-color: #fafafa;
 }
 .mentors-chat-item-keyboard {
     border-top: 1px solid #d0cccc;
     display: flex;
     align-items: center;
     height: 10vh;
-    background-color: #fff;
+    background-color: #fafafa;
+    border: 1px solid #fafafa !important;
     padding: 2rem 2rem 1rem 2rem;
     div {
         width: 100%;
@@ -52,33 +54,44 @@
 .chat-input {
     color: #000;
     // box-shadow: 0px 0px 7px grey !important;
-    border-radius: 50px !important;
+    border-radius: 10px !important;
     border: 2px solid #d3d3d3 !important;
+    padding: 1rem 1rem !important;
 }
 .send-chat {
     display: flex;
     align-items: center;
+    margin: 0 auto;
     padding: 0 2rem;
-    width: 100%;
+    width: 90% !important;
     &-input {
         width: 100% !important;
+        &:focus {
+            outline: none;
+            border: none;
+        }
     }
     &-icon {
         display: flex;
         align-items: center;
         justify-content: center;
         width: fit-content !important;
-        background-color: $mercy-color-1;
+        background-color: transparent;
         padding: 1rem;
         border-radius: 50%;
-        margin-left: 1rem;
+        margin-left: - 3.8rem;
+        border: none;
+        @include transition;
         &:hover {
             cursor: pointer;
         }
         .send-icon {
             width: 1.7rem;
             height: 1.7rem;
-            filter: invert(98%) sepia(28%) saturate(150%) hue-rotate(192deg) brightness(115%) contrast(100%);
+            filter: invert(53%) sepia(83%) saturate(1525%) hue-rotate(161deg) brightness(87%) contrast(92%);
+            &:hover {
+                filter: invert(0%) sepia(4%) saturate(7500%) hue-rotate(216deg) brightness(102%) contrast(105%);
+            }
         }
     }
 }
@@ -168,4 +181,22 @@
     font-family: 'Roboto', sans-serif;
     color: inherit !important;
 }
+.side-chat-dots {
+    ::after {
+        content: "...";
+        display: inline;
+    }
+}
+.chat-icons {
+  width: 2.5rem;
+  height: 2.5rem;
+  @include transition;
+  &:hover {
+    filter: invert(53%) sepia(83%) saturate(1525%) hue-rotate(161deg) brightness(87%) contrast(92%);
+  }
+}
 
+.current-chat {
+    background-color: $mercy-color-1 !important;
+    color: #fff;
+}
