--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -989,6 +989,7 @@ textarea[data-info=content] {
 
 .sidebare-lastchat p {
   color: lightgray;
+  margin: 0;
 }
 
 .sidebare-lastchat * {
@@ -1014,6 +1015,24 @@ textarea[data-info=content] {
 .current-chat {
   background-color: #0f9ed5 !important;
   color: #fff;
+}
+
+.chat-item-detials {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+}
+.chat-item-detials-text {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.sidebar-lastchat-date {
+  margin-left: 3rem;
+  font-size: 1.2rem !important;
 }
 
 @media screen and (max-width: 1000px) {
