--- a/src/Styles/_components/mentor-chat.scss
+++ b/src/Styles/_components/mentor-chat.scss
@@ -174,6 +174,7 @@
 
 .sidebare-lastchat p {
     color: lightgray;
+    margin: 0;
 }
 
 .sidebare-lastchat * {
@@ -199,4 +200,23 @@
 .current-chat {
     background-color: $mercy-color-1 !important;
     color: #fff;
+}
+
+.chat-item-detials {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    &-text {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    }
+}
+
+.sidebar-lastchat-date {
+
+    margin-left: 3rem;
+    font-size: 1.2rem !important;
 }
